--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
-                        <h4>Embassat't Festival</h4>
+                        <h4>Embassa't Festival </h4>
                         <p>20-21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
