taken lori meyers added madblue

--- a/index.html
+++ b/index.html
@@ -209,17 +209,23 @@
                <h2 class="text-white">Coming Concerts</h2>
                <div class="row my-3 justify-content-center">
                   <div class="col-md-4">
-                     <div class="merch-card text-light">
+                     <!--<div class="merch-card text-light">
                         <h4 class="my-3">Barcelona</h4>
                         <h5>Supporting <b>Lori Meyers</b></h5>
                         <p>19 Febrero 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
-                     </div>
+                     </div>-->
                      <div class="merch-card text-light">
                         <h4 class="my-3">L'Hospitalet</h4>
                         <h4><b>LETS</b> Festival</h4>
                         <p>18 March 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h4 class="my-3">Madrid</h4>
+                        <h4><b>Madblue</h4>
+                        <p>1 May 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://feverup.com/m/110706','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
