--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
                      </div>
                      <div class="merch-card text-light">
                      	<h4 class="my-3">Madrid</h4>
-                     	<h4><b>La Casa Encendida [13.00 h]</b></h4>
+                     	<h4><b>La Casa Encendida @13.00 h</b></h4>
                      	<button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.lacasaencendida.es/conciertos/radio-encendida-2022-13449','_blank')">Free</button>
+                     </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
                         <h4><b>Madblue</h4>
