--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>kora.st</title>
-      <link rel="icon" href="assets/smiley-transparent.ico">
+      <link rel="icon" href="assets/smiley_kora.ico">
       <link
          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
          rel="stylesheet"
@@ -57,7 +57,27 @@
          </nav>
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
-            <small class="fst-italic">11 · 03 · 22</small>
+            <small class="fst-italic">Ya disponible</small>
+            <ul class="social-media d-flex flex-column align-items-center justify-content-between">
+               <li>
+                  <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
+               </li>
+               <li>
+                  <a href="https://music.apple.com/us/artist/kora/1493175597" target="_blank"><i class="fab fa-apple fa-2x"></i></a>
+               </li>
+               <li>
+                  <a href="https://www.youtube.com/channel/UCQp5xce5M6J2szTWK7ISbcw" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+               </li>
+               <!--<li>
+                  <a href="http://tidal.com/browse/artist/23071471" target="_blank"><i class="fab fa-tidal"></i></a>
+                  </li>-->
+               <li>
+                  <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i class="fab fa-deezer fa-2x"></i></a>
+               </li>
+               <li>
+                  <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
+               </li>
+            </ul>
          </div>
       </header>
       <main id="main">
@@ -266,7 +286,7 @@
          <div class="container">
             <div class="row text-center">
                <div class="col-md-4">
-                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley-transparent.png" alt="logo" />
+                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley_kora.png" alt="logo" />
                </div>
                <div
                   class="col-md-4 d-flex justify-content-center align-items-center"
