--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          </nav>
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
-            <small class="fst-italic">Ya disponible</small>
+            <small class="fst-italic">Ya disponible en todas las plataformas</small>
             <ul class="social-media d-flex flex-column align-items-center justify-content-between">
                <li>
                   <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
@@ -286,7 +286,7 @@
          <div class="container">
             <div class="row text-center">
                <div class="col-md-4">
-                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley_kora.png" alt="logo" />
+                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley_kora.png" alt="logo" class="rotate90">
                </div>
                <div
                   class="col-md-4 d-flex justify-content-center align-items-center"
