--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
-                        <h4><b>Madblue</h4>
+                        <h4><b>Madblue</b></h4>
                         <p>1 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://feverup.com/m/110706','_blank')">Tickets</button>
                      </div>
@@ -263,7 +263,7 @@
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
-                        <h4>Embassa't Festival </h4>
+                        <h4><b>Embassa't Festival</b></h4>
                         <p>20-21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
@@ -300,22 +300,26 @@
                </div>
                <div class="col-md-4">
                   <ul class="social-media">
-                     <li>
+                     <!--<li>
                         <a href="https://www.instagram.com/kora.st/" target="_blank"><i style="font-size: 1.5em;" class="fab fa-instagram"></i></a>
+                     </li>-->
+                     <li>
+                        <a href="https://open.spotify.com/album/6Z73rP80ugJPA7zEhCitar" target="_blank"><i style="font-size: 1.5em;" class="fab fa-spotify"></i></a>
                      </li>
                      <li>
-                        <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i style="font-size: 1.5em;" class="fab fa-spotify"></i></a>
+                        <a href="https://music.apple.com/es/album/fuera-de-lugar/1609486219" target="_blank"><i style="font-size: 1.5em;" class="fab fa-apple"></i></a>
                      </li>
                      <li>
-                        <a href="https://music.apple.com/us/artist/kora/1493175597" target="_blank"><i style="font-size: 1.5em;" class="fab fa-apple"></i></a>
+                        <a href="https://www.youtube.com/watch?v=WzoEQ8Xxouo&list=OLAK5uy_lQMFWKGARcI_wKEnQpeDwmKITiVClcFdA" target="_blank"><i style="font-size: 1.5em;" class="fab fa-youtube"></i></a>
                      </li>
                      <li>
-                        <a href="https://www.youtube.com/channel/UCQp5xce5M6J2szTWK7ISbcw"target="_blank"><i style="font-size: 1.5em;" class="fab fa-youtube"></i></a>
+                        <a href="https://www.deezer.com/es/album/294709512" target="_blank"><i style="font-size: 1.5em;" class="fab fa-deezer"></i></a>
+                     <li>
+                        <a href="https://www.tidal.com/album/216207927" target="_blank"><i class="iconify" data-icon="simple-icons:tidal" style="color: white;font-size: 1.5em;"></i></a>
                      </li>
                      <li>
-                        <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i style="font-size: 1.5em;" class="fab fa-deezer"></i></a>
-                     <li>
-                        <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white;font-size: 1.5em;"></i></a>
+                     	<a href="https://soundcloud.com/kora-official/sets/fuera-de-lugar-4" target="_blank"><i style="font-size: 1.5em;" class="fab fa-soundcloud"></i></a>
+					 </li>
                   </ul>
                </div>
             </div>
