--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
             <small class="fst-italic">Ya disponible en todas las plataformas</small>
-            <ul class="social-media d-flex flex-column align-items-center justify-content-between">
+            <ul class="social-media-h d-flex flex-column align-items-center justify-content-between">
                <li>
                   <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
                </li>
@@ -77,6 +77,9 @@
                <li>
                   <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
                </li>
+               <li>
+                  <a href="https://soundcloud.com/kora-official/sets/fuera-de-lugar-4" target="_blank"><i style="font-size: 1.5em;" class="fab fa-soundcloud"></i></a>
+				</li>
             </ul>
          </div>
       </header>
@@ -300,9 +303,9 @@
                </div>
                <div class="col-md-4">
                   <ul class="social-media">
-                     <!--<li>
+                     <li>
                         <a href="https://www.instagram.com/kora.st/" target="_blank"><i style="font-size: 1.5em;" class="fab fa-instagram"></i></a>
-                     </li>-->
+                     </li>
                      <li>
                         <a href="https://open.spotify.com/album/6Z73rP80ugJPA7zEhCitar" target="_blank"><i style="font-size: 1.5em;" class="fab fa-spotify"></i></a>
                      </li>
