--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
             <small class="fst-italic">Ya disponible en todas las plataformas</small>
-            <ul class="social-media-h d-flex flex-column align-items-center justify-content-between">
+            <ul class="social-media-h d-inline-block flex-column align-items-center justify-content-between">
                <li>
-                  <a href="https://open.spotify.com/artist/3ZxaYY2eYNWxg8v1s2k6JD" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
+                  <a href="https://open.spotify.com/album/6Z73rP80ugJPA7zEhCitar" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
                </li>
                <li>
-                  <a href="https://music.apple.com/us/artist/kora/1493175597" target="_blank"><i class="fab fa-apple fa-2x"></i></a>
+                  <a href="https://music.apple.com/es/album/fuera-de-lugar/1609486219" target="_blank"><i class="fab fa-apple fa-2x"></i></a>
                </li>
                <li>
-                  <a href="https://www.youtube.com/channel/UCQp5xce5M6J2szTWK7ISbcw" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
+                  <a href="https://www.youtube.com/watch?v=WzoEQ8Xxouo&list=OLAK5uy_lQMFWKGARcI_wKEnQpeDwmKITiVClcFdA" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
                </li>
                <!--<li>
                   <a href="http://tidal.com/browse/artist/23071471" target="_blank"><i class="fab fa-tidal"></i></a>
                   </li>-->
                <li>
-                  <a href="https://deezer.page.link/EfmC6MrtLGSgE3EB7" target="_blank"><i class="fab fa-deezer fa-2x"></i></a>
+                  <a href="https://www.deezer.com/es/album/294709512" target="_blank"><i class="fab fa-deezer fa-2x"></i></a>
                </li>
                <li>
-                  <a href="http://tidal.com/browse/artist/23071471" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
+                  <a href="https://tidal.com/browse/album/216207927" target="_black"><i class="iconify" data-icon="simple-icons:tidal" style="color: white; font-size: 2em;"></i></a>
                </li>
                <li>
                   <a href="https://soundcloud.com/kora-official/sets/fuera-de-lugar-4" target="_blank"><i style="font-size: 1.5em;" class="fab fa-soundcloud"></i></a>
@@ -237,12 +237,12 @@
                         <h5>Supporting <b>Lori Meyers</b></h5>
                         <p>19 Febrero 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.guitarbcn.com/es/c-3697/LORI-MEYERS','_blank')">Tickets</button>
-                     </div>-->
+                     </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">L'Hospitalet</h4>
                         <h4><b>LETS</b> Festival</h4>
                         <p>18 March 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>-->
                      </div>
                      <div class="merch-card text-light">
                      	<h4 class="my-3">Madrid</h4>
@@ -289,7 +289,7 @@
          <div class="container">
             <div class="row text-center">
                <div class="col-md-4">
-                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley_kora.png" alt="logo" class="rotate90">
+                  <img style="max-width: 64px; max-height: 64px" src="assets/smiley_kora.png" alt="logo" class="rotate180">
                </div>
                <div
                   class="col-md-4 d-flex justify-content-center align-items-center"
