--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          <div class="text-center">
             <p class="fw-bold text-white">:: Fuera de lugar ::</p>
             <small class="fst-italic">Ya disponible en todas las plataformas</small>
-            <ul class="social-media-h d-inline-block flex-column align-items-center justify-content-between">
+            <ul class="social-media">
                <li>
                   <a href="https://open.spotify.com/album/6Z73rP80ugJPA7zEhCitar" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
                </li>
