--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <h4 class="my-3">L'Hospitalet</h4>
                         <h4><b>LETS</b> Festival</h4>
                         <p>18 March 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>-->
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.letsfestival.cat/es/programacion/c/53-kora-bernarda.html','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                      	<h4 class="my-3">Madrid</h4>
@@ -247,12 +247,24 @@
                      	<h4><b>La Casa Encendida</b></h4>
                      	<p>13.00h, 20 March 2022</p>
                      	<button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.lacasaencendida.es/conciertos/radio-encendida-2022-13449','_blank')">Free</button>
+                     </div>-->
+                     <!--<div class="merch-card text-light">
+                        <h4 class="my-3"><b>Murcia</b></h4>
+                        <h4><b>Warm Up</b></h4>
+                        <p>30 April 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.warmupfestival.es/','_blank')">Tickets</button>-->
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
                         <h4><b>Madblue</b></h4>
                         <p>1 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://feverup.com/m/110706','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h4 class="my-3">Puerto de Santa María</h4>
+                        <h4><b>Alhambra Monkey Weekend (Castillo de San Marcos)</h4>
+                        <p>13 May 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://fanmusicfest.com/content/alhambra-monkey-weekend-2022','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
@@ -264,13 +276,25 @@
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
                         <h4><b>Embassa't Festival</b></h4>
-                        <p>20-21 May 2022</p>
+                        <p>21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
+                     <!--<div class="merch-card text-light">
+                        <h4 class="my-3">Regensburg</h4>
+                        <h4><b>Spanien an der Donau</b></h4>
+                        <p>2 Juni 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('','_blank')">Tickets</button>
+                     </div>-->
                      <div class="merch-card text-light">
-                        <h4 class="my-3">Playa de la Concha<br> Vilagarcia de Arousa</h4>
+                        <h4 class="my-3"><b>Pontevedra</b> Vilagarcia de Arousa</h4>
                         <h4><b>Atlantic Fest</b></h4>
-                        <p>15 16 & 17 July 2022</p>
+                        <p>15 July 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
+                        <h4 class="my-3">Sevilla</h4>
+                        <h4><b>Monkey Week</b></h4>
+                        <p>24-26 November 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
                   </div>
