--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
                      </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Puerto de Santa María</h4>
-                        <h4><b>Alhambra Monkey Weekend (Castillo de San Marcos)</h4>
+                        <h4><b>Alhambra Monkey Weekend</b></h4> 
+                        <h6>Castillo de San Marcos</h6>
                         <p>13 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://fanmusicfest.com/content/alhambra-monkey-weekend-2022','_blank')">Tickets</button>
                      </div>
