--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <h4 class="my-3">Sevilla</h4>
                         <h4><b>Monkey Week</b></h4>
                         <p>24-26 November 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>
                      </div>
                   </div>
                </div>
