--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
                         <p>15 July 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
-                     <div class="merch-card text-light">
+                     <!--<div class="merch-card text-light">
                         <h4 class="my-3">Sevilla</h4>
                         <h4><b>Monkey Week</b></h4>
                         <p>24-26 November 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>-->
                      </div>
                   </div>
                </div>
