--- a/index.html
+++ b/index.html
@@ -280,23 +280,23 @@
                         <p>21 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
-                     <!--<div class="merch-card text-light">
+                     <div class="merch-card text-light">
                         <h4 class="my-3">Regensburg</h4>
                         <h4><b>Spanien an der Donau</b></h4>
                         <p>2 Juni 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('','_blank')">Tickets</button>
-                     </div>-->
+                     </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3"><b>Pontevedra</b> Vilagarcia de Arousa</h4>
                         <h4><b>Atlantic Fest</b></h4>
                         <p>15 July 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
-                     <!--<div class="merch-card text-light">
+                     <div class="merch-card text-light">
                         <h4 class="my-3">Sevilla</h4>
                         <h4><b>Monkey Week</b></h4>
                         <p>24-26 November 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>-->
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>
                      </div>
                   </div>
                </div>
