--- a/index.html
+++ b/index.html
@@ -190,18 +190,18 @@
                   <iframe id="videoMenu" width="560" height="480" src="https://www.youtube.com/embed/Iuh1IJUmJ5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
                <div class="controls row row-cols-md-3 text-center g-3">
-                  <div class="col">
+                  <!--<div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg active" data-src="https://www.youtube.com/embed/Iuh1IJUmJ5g">elixir :: bajo cielo</button>
-                  </div>
+                  </div>-->
                   <div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/aGphQndzrH4">Como si nada</button>
                   </div>
                   <div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/9kYFi2rWsB0">NEQP</button>
                   </div>
-                  <div class="col">
+                  <!--<div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/df9c9pZ2GhU">Zzz</button>
-                  </div>
+                  </div>-->
                   <div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/idw65e5OiGM">La Luna</button>
                   </div>
@@ -211,9 +211,9 @@
                   <div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/8Kb8E_qbBQY">Vuelo</button>
                   </div>
-                  <div class="col">
+                  <!--<div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/J0iNGFl_Bpg">Ya no quiero que me busques</button>
-                  </div>
+                  </div>-->
                   <div class="col">
                      <button class="vidBtn btn btn-outline-secondary btn-lg" data-src="https://www.youtube.com/embed/surZkoR-nU8">Marte</button>
                   </div>
@@ -248,18 +248,18 @@
                      	<p>13.00h, 20 March 2022</p>
                      	<button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.lacasaencendida.es/conciertos/radio-encendida-2022-13449','_blank')">Free</button>
                      </div>-->
-                     <!--<div class="merch-card text-light">
+                     <div class="merch-card text-light">
                         <h4 class="my-3"><b>Murcia</b></h4>
                         <h4><b>Warm Up</b></h4>
                         <p>30 April 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.warmupfestival.es/','_blank')">Tickets</button>-->
-                     </div>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.warmupfestival.es/','_blank')">Tickets</button>
+                     </div><!--
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
                         <h4><b>Madblue</b></h4>
                         <p>1 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://feverup.com/m/110706','_blank')">Tickets</button>
-                     </div>
+                     </div>-->
                      <div class="merch-card text-light">
                         <h4 class="my-3">Puerto de Santa María</h4>
                         <h4><b>Alhambra Monkey Weekend</b></h4> 
