--- a/index.html
+++ b/index.html
@@ -248,32 +248,26 @@
                      	<p>13.00h, 20 March 2022</p>
                      	<button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.lacasaencendida.es/conciertos/radio-encendida-2022-13449','_blank')">Free</button>
                      </div>-->
-                     <div class="merch-card text-light">
+                     <!--<div class="merch-card text-light">
                         <h4 class="my-3"><b>Murcia</b></h4>
                         <h4><b>Warm Up</b></h4>
                         <p>30 April 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.warmupfestival.es/','_blank')">Tickets</button>
-                     </div><!--
+                     </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Madrid</h4>
                         <h4><b>Madblue</b></h4>
                         <p>1 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://feverup.com/m/110706','_blank')">Tickets</button>
-                     </div>-->
+                     </div>
                      <div class="merch-card text-light">
                         <h4 class="my-3">Puerto de Santa María</h4>
                         <h4><b>Alhambra Monkey Weekend</b></h4> 
                         <h6>Castillo de San Marcos</h6>
                         <p>13 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://fanmusicfest.com/content/alhambra-monkey-weekend-2022','_blank')">Tickets</button>
-                     </div>
-                     <div class="merch-card text-light">
-                        <h4 class="my-3">Madrid</h4>
-                        <h4><b>Sound Isidro</b></h4>
-                        <h6>Sala El Sol</h6>
-                        <p>14 May 2022</p>
-                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.wegow.com/es-es/conciertos/kora-en-sound-isidro-2022','_blank')">Tickets</button>
-                     </div>
+                     </div>-->
+
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
                         <h4><b>Embassa't Festival</b></h4>
@@ -281,9 +275,18 @@
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.embassat.com/','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
+                        <h4 class="my-3">Madrid</h4>
+                        <h4><b>Sound Isidro</b></h4>
+                        <h6>Sala El Sol</h6>
+                        <h8>Nueva Fecha!</h8>
+                        <p>27 May 2022</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.wegow.com/es-es/conciertos/kora-en-sound-isidro-2022','_blank')">Tickets</button>
+                     </div>
+                     <div class="merch-card text-light">
                         <h4 class="my-3">Regensburg</h4>
                         <h4><b>Spanien an der Donau</b></h4>
                         <p>2 Juni 2022</p>
+                        <h4><b>Free:)</b></h4>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
