--- a/index.html
+++ b/index.html
@@ -296,9 +296,16 @@
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.atlanticfest.com','_blank')">Tickets</button>
                      </div>
                      <div class="merch-card text-light">
+                        <h4 class="my-3">Aranda del Duero</h4>
+                        <h4><b>SONORAMA RIBERA 2022</b></h4>
+                        <p>14 August</p>
+                        <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://sonorama-aranda.com/entradas/','_blank')">Tickets</button>
+                     </div>
+
+                     <div class="merch-card text-light">
                         <h4 class="my-3">Sevilla</h4>
                         <h4><b>Monkey Week</b></h4>
-                        <p>24-26 November 2022</p>
+                        <p>24-26 November 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://www.monkeyweek.org/','_blank')">Tickets</button>
                      </div>
                   </div>
