--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <h6>Castillo de San Marcos</h6>
                         <p>13 May 2022</p>
                         <button class="tourBtn btn btn-outline-secondary btn-lg" onclick=" window.open('https://fanmusicfest.com/content/alhambra-monkey-weekend-2022','_blank')">Tickets</button>
-                     </div>-->
+                     
 
                      <div class="merch-card text-light">
                         <h4 class="my-3">Sabadell</h4>
@@ -287,7 +287,7 @@
                         <h4><b>Spanien an der Donau</b></h4>
                         <p>2 Juni 2022</p>
                         <h4><b>Free:)</b></h4>
-                     </div>
+                     </div></div>-->
                      <div class="merch-card text-light">
                         <h4 class="my-3"><b>Pontevedra</b> Vilagarcia de Arousa</h4>
                         <h4><b>Atlantic Fest</b></h4>
